--- a/Here I ADD Media.html
+++ b/Here I ADD Media.html
@@ -112,8 +112,9 @@
       considered canceled and he can be re-admitted by paying a re-admission fee
       equal to one month. Steel scales cannot be used in the school.</b
     >
-    <h2>Video of School Visit</h2>
     <center>
+      <h2>Video of School Visit</h2>
+
       <video width="500" height="350" controls>
         <source src="BCSIR HS.mp4" type="video/mp4" />
         Your browser does not support the video tag.
@@ -129,5 +130,18 @@
     address (bcsirscsd@yahoo.com) and mobile number (01716223288) for inquiries
     and communication, we strive to maintain a strong connection with our
     students, parents, and community.
+    <center>
+      <h2>BCSIR High School- ebong classer bairey</h2>
+      <iframe
+        width="560"
+        height="315"
+        src="https://www.youtube.com/embed/SKkSXI_57zE?si=A36uWkknJff4audH"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
+    </center>
   </body>
 </html>
